[project]
name = "dicom-anonymizer-cli"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "pydicom>=3.0.1",
    "pandas",
    "click",
    "rich",
]

[project.scripts]
dicom-anonymizer-cli = "anonymizer_rename:cli"

[tool.uv.sources]
mri-normalization-tools = { git = "https://github.com/alabamagan/mri_normalization_tools" }